--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,22 +1,15 @@
-<!-- Navbar -->
 <nav
 	class="navbar navbar-expand-lg navbar-light bg-light">
-	<!-- Container wrapper -->
 	<div
 		class="container-fluid">
-		<!-- Toggle button -->
 		<button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<i class="fas fa-bars"></i>
 		</button>
-
-		<!-- Collapsible wrapper -->
 		<div
 			class="collapse navbar-collapse" id="navbarSupportedContent">
-			<!-- Navbar brand -->
 			<a class="navbar-brand mt-2 mt-lg-0" href="#">
 				<img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" height="15" alt="MDB Logo" loading="lazy"/>
 			</a>
-			<!-- Left links -->
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
 					<a class="nav-link" href="#">Dashboard</a>
@@ -28,19 +21,12 @@
 					<a class="nav-link" href="#">Projects</a>
 				</li>
 			</ul>
-			<!-- Left links -->
 		</div>
-		<!-- Collapsible wrapper -->
-
-		<!-- Right elements -->
 		<div
 			class="d-flex align-items-center">
-			<!-- Icon -->
 			<a class="text-reset me-3" href="#">
 				<i class="fas fa-shopping-cart"></i>
 			</a>
-
-			<!-- Notifications -->
 			<div class="dropdown">
 				<a class="text-reset me-3 dropdown-toggle hidden-arrow" href="#" id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
 					<i class="fas fa-bell"></i>
@@ -58,26 +44,25 @@
 					</li>
 				</ul>
 			</div>
-			<!-- Avatar -->
+			{% if app.user %}
 			<div class="dropdown">
 				<a class="dropdown-toggle d-flex align-items-center hidden-arrow" href="#" id="navbarDropdownMenuAvatar" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
 					<img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle" height="25" alt="Black and White Portrait of a Man" loading="lazy"/>
 				</a>
 				<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
 					<li>
-						<a class="dropdown-item" href="#">My profile</a>
+						<a class="dropdown-item" href="#">Mon profil</a>
 					</li>
 					<li>
-						<a class="dropdown-item" href="#">Settings</a>
+						<a class="dropdown-item" href="#">Paramètres</a>
 					</li>
 					<li>
-						<a class="dropdown-item" href="#">Logout</a>
+						<a class="dropdown-item" href="{{ path('security_logout') }}">Déconnexion</a>
 					</li>
 				</ul>
 			</div>
+			{% else %}
+			{% endif %}
 		</div>
-		<!-- Right elements -->
 	</div>
-	<!-- Container wrapper -->
 </nav>
-<!-- Navbar -->
