Edit profile and change password

--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -54,7 +54,10 @@
 						<a class="dropdown-item" href="#">Mon profil</a>
 					</li>
 					<li>
-						<a class="dropdown-item" href="#">Paramètres</a>
+						<a class="dropdown-item" href="{{ path('user_edit', {id : app.user.id}) }}">Modifier mes informations</a>
+					</li>
+					<li>
+						<a class="dropdown-item" href="{{ path('user_edit_password', {id : app.user.id}) }}">Modifier mon mot de passe</a>
 					</li>
 					<li>
 						<a class="dropdown-item" href="{{ path('security_logout') }}">Déconnexion</a>
