--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,3 +15,9 @@
         height: 100%;
     }
 }
+
+.bg-1 {
+    background: url("../images/22.jpg") no-repeat 50% 50%;
+    background-size: cover;
+    position: relative;
+}
