--- a/templates/pages/security/login.html.twig
+++ b/templates/pages/security/login.html.twig
@@ -24,13 +24,13 @@
 					{% endif %}
 					<form action="{{ path('security_login') }}" method="post" name="login">
 						<div class="form-outline mb-4">
-							<input type="email" id="username" name="_username" class="form-control form-control-lg" required/>
-							<label class="form-label" for="form1Example13">Adresse email</label>
+							<label class="form-label" for="email">Adresse email</label>
+							<input type="email" id="username" name="_username" class="form-control" required/>
 						</div>
 
 						<div class="form-outline mb-4">
-							<input type="password" id="password" name="_password" class="form-control form-control-lg" required/>
-							<label class="form-label" for="form1Example23">Mot de passe</label>
+							<label class="form-label" for="password">Mot de passe</label>
+							<input type="password" id="password" name="_password" class="form-control" required/>
 						</div>
 
 						<div class="d-flex justify-content-around align-items-center mb-4">
@@ -41,13 +41,19 @@
 							<a href="#!">Mot de passe oublié ?</a>
 						</div>
 
-						<button type="submit" class="btn btn-primary btn-lg btn-block">Connecter</button>
-						<div class="divider d-flex align-items-center my-4">
-							<p class="text-center fw-bold mx-3 mb-0 text-muted">OU</p>
+						<div class="d-grid gap-2">
+							<button type="submit" class="btn btn-primary">Connecter</button>
 						</div>
-						<a class="btn btn-primary btn-lg btn-block" style="background-color: #3b5998" href="#!" role="button">
-							<i class="fab fa-facebook-f me-2"></i>Continuer avec Facebook
-						</a>
+
+						<div class="divider d-flex align-items-center my-4">
+
+							<p class="text-center fw-bold mx-3 mb-0">OU</p>
+						</div>
+						<div class="d-grid gap-2">
+							<a class="btn btn-primary active" href="#!" role="button">
+								<i class="bi bi-facebook me-2"></i>Continuer avec Facebook
+							</a>
+						</div>
 					</form>
 				</div>
 			</div>
