--- a/templates/pages/user/edit.html.twig
+++ b/templates/pages/user/edit.html.twig
@@ -5,22 +5,27 @@
 {% endblock %}
 
 {% block body %}
-	<section class="vh-100">
-		<div class="container-fluid h-custom">
-			<div class="row d-flex justify-content-center align-items-center h-100 mt-5">
-				<div class="col-md-6 col-lg-4 col-xl-3">
+	<section class="py-5" id="features">
+		<div class="container px-5 my-4">
+			<div class="row gx-5">
+				<div class="col-lg-4 mb-5 mb-lg-0">
+					{% include "partials/_nav.html.twig" %}
+				</div>
+				<div class="col-lg-8 mb-5 mb-lg-0">
 					{% for message in app.flashes('warning') %}
-						<div class="alert alert-warning mt-4">
+						<div class="alert alert-warning">
+							{{ message }}
+						</div>
+					{% endfor %}
+					{% for message in app.flashes('success') %}
+						<div class="alert alert-success">
 							{{ message }}
 						</div>
 					{% endfor %}
 					{{ form(form)}}
-					</div>
-					<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-						<img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg" class="img-fluid" alt="Phone image">
-					</div>
 				</div>
 			</div>
-		</section>
-	{% endblock %}
-	{% block footer %}{% endblock %}
+		</div>
+	</section>
+{% endblock %}
+{% block footer %}{% endblock %}
