--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -6,7 +6,7 @@
     <section class="mb-4">
       <!-- Facebook -->
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-facebook-f"></i
+        ><i class="bi bi-facebook"></i
       ></a>
 
       <!-- Twitter -->
