--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -27,26 +27,9 @@
 			<a class="text-reset me-3" href="#">
 				<i class="fas fa-shopping-cart"></i>
 			</a>
-			<div class="dropdown">
-				<a class="text-reset me-3 dropdown-toggle hidden-arrow" href="#" id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
-					<i class="fas fa-bell"></i>
-					<span class="badge rounded-pill badge-notification bg-danger">1</span>
-				</a>
-				<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-					<li>
-						<a class="dropdown-item" href="#">Some news</a>
-					</li>
-					<li>
-						<a class="dropdown-item" href="#">Another news</a>
-					</li>
-					<li>
-						<a class="dropdown-item" href="#">Something else here</a>
-					</li>
-				</ul>
-			</div>
 			{% if app.user %}
 			<div class="dropdown">
-				<a class="dropdown-toggle d-flex align-items-center hidden-arrow" href="#" id="navbarDropdownMenuAvatar" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
+				<a class="nav-link dropdown-toggle"  data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
 					<img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle" height="25" alt="Black and White Portrait of a Man" loading="lazy"/>
 				</a>
 				<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
@@ -59,6 +42,7 @@
 					<li>
 						<a class="dropdown-item" href="{{ path('user_edit_password', {id : app.user.id}) }}">Modifier mon mot de passe</a>
 					</li>
+					<li><hr class="dropdown-divider"></li>
 					<li>
 						<a class="dropdown-item" href="{{ path('security_logout') }}">Déconnexion</a>
 					</li>
