--- a/templates/pages/category/new.html.twig
+++ b/templates/pages/category/new.html.twig
@@ -9,20 +9,10 @@
 		<div class="container px-5 my-4">
 			<div class="row gx-5">
 				<div class="col-lg-4 mb-5 mb-lg-0">
-					{% include "pages/user/_menu.html.twig" %}
+					{% include "pages/partials/_menu.html.twig" %}
 				</div>
 				<div class="col-lg-8 mb-5 mb-lg-0">
-					{% for message in app.flashes('warning') %}
-						<div class="alert alert-warning">
-							{{ message }}
-						</div>
-					{% endfor %}
-					{% for message in app.flashes('success') %}
-						<div class="alert alert-success">
-							{{ message }}
-						</div>
-					{% endfor %}
-					{{ form(form)}}
+					{{ include('pages/category/_form.html.twig', {'button_label': 'Modifier la catégorie'}) }}
 				</div>
 			</div>
 		</div>
