--- a/templates/pages/security/login.html.twig
+++ b/templates/pages/security/login.html.twig
@@ -5,13 +5,13 @@
 {% endblock %}
 
 {% block body %}
-	<section class="vh-100">
-		<div class="container-fluid h-custom">
-			<div class="row d-flex justify-content-center align-items-center h-100">
-				<div class="col-md-9 col-lg-6 col-xl-5">
+	<section class="py-5">
+		<div class="container my-4">
+			<div class="row">
+				<div class="col-lg-7">
 					<img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg" class="img-fluid" alt="Phone image">
 				</div>
-				<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+				<div class="col-lg-5 mt-5">
 					{% for message in app.flashes('success') %}
 						<div class="alert alert-success mt-4">
 							{{ message }}
@@ -41,18 +41,8 @@
 							<a href="#!">Mot de passe oublié ?</a>
 						</div>
 
-						<div class="d-grid gap-2">
+						<div class="d-flex justify-content-around align-items-center mb-4">
 							<button type="submit" class="btn btn-primary">Connecter</button>
-						</div>
-
-						<div class="divider d-flex align-items-center my-4">
-
-							<p class="text-center fw-bold mx-3 mb-0">OU</p>
-						</div>
-						<div class="d-grid gap-2">
-							<a class="btn btn-primary active" href="#!" role="button">
-								<i class="bi bi-facebook me-2"></i>Continuer avec Facebook
-							</a>
 						</div>
 					</form>
 				</div>
@@ -60,4 +50,3 @@
 		</div>
 	</section>
 {% endblock %}
-{% block footer %}{% endblock %}
