--- a/templates/pages/user/edit_password.html.twig
+++ b/templates/pages/user/edit_password.html.twig
@@ -9,7 +9,7 @@
 		<div class="container px-5 my-4">
 			<div class="row gx-5">
 				<div class="col-lg-4 mb-5 mb-lg-0">
-					{% include "partials/_nav.html.twig" %}
+					{% include "pages/user/_menu.html.twig" %}
 				</div>
 				<div class="col-lg-8 mb-5 mb-lg-0">
 					{% for message in app.flashes('warning') %}
